--- a/app/views/welcome_index/index.html.erb
+++ b/app/views/welcome_index/index.html.erb
@@ -48,9 +48,9 @@
 
      <footer class="footer">
        <ul>
-         <li><a href="https://www.facebook.com/JuPierlot" target="_blank"><img src="assets/images/facebook_logo.png" alt="What the Deuce" class="image-footer" id="fb_footer"></a></li>
-         <li><a href="https://www.instagram.com/jp_gooner/" target="_blank"><img src="instagram_logo.png" alt="What the Deuce" class="image-footer"></a></li>
-         <li><a href="https://twitter.com/jp_gooner" target="_blank"><img src="twitter_logo.png" alt="What the Deuce" class="image-footer"></a></li>
+         <li><a href="https://www.facebook.com/JuPierlot" target="_blank"><img src="https://media.giphy.com/media/ijEiXYEo9DBxm/giphy.gif" alt="What the Deuce" class="image-footer" id="fb_footer"></a></li>
+         <li><a href="https://www.instagram.com/jp_gooner/" target="_blank"><img src="https://media.giphy.com/media/uo6rcjwHSAFsQ/giphy.gif" alt="What the Deuce" class="image-footer"></a></li>
+         <li><a href="https://twitter.com/jp_gooner" target="_blank"><img src="https://media.giphy.com/media/SMKiEh9WDO6ze/giphy.gif" alt="What the Deuce" class="image-footer"></a></li>
        </ul>
 
        <a href="mailto:pierlot.julien@gmail.com?subject= Contact The Book Club"><h1 class="footer-title"> Contact<br> The Book Club</h1></a>
